# IABD2-PA

./: .gitignore  Cargo.toml  Rapport.md  Rendu2_interactif_jupyter.ipynb  readme  readme.md  requirements.txt  test.py  test_rbf.py
.ipynb_checkpoints/: Rendu2_interactif_jupyter-checkpoint.ipynb
docs/: [Notebook] Cas de tests.ipynb
examples/: use_pmc_from_csv.rs  use_with_csv.rs
mylib/: Cargo.toml
mylib/src/: lib.rs
notebooks/: PMC_demo.ipynb  data_reg_lin.csv  data_xor.csv  linear_regression_demo.ipynb  weights.txt
pyo3_sum/: Cargo.toml
pyo3_sum/src/: lib.rs
src/: lib.rs  main.rs
src/data/: dataset.csv  linear_results.csv  pmc_dataset.csv  pmc_results.csv
src/lib/: linear_model.rs  linear_regression.rs  mod.rs  pmc.rs
src/models/: linear_classification.rs  linear_regression.rs  mlp.rs  mod.rs  model_trait.rs  rbfn.rs  svm.rs  utils.rs
tests/: linear_classification_tests.rs  linear_model_test.rs  linear_regression_tests.rs  mlp_tests.rs  nonlinear_transform_test.rs  pmc_test.rs  rbfn_tests.rs  svm_tests.rs
