[package]
name = "mylib"
version = "0.1.0"
edition = "2021"

[lib]
name = "mylib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
ndarray = "0.15"
ndarray-linalg = { version = "0.16", default-features = false, features = ["openblas-static"] }
rand = "0.8"
